Bug 431824 - Closed window decoration faster than window in wayland
Summary: Closed window decoration faster than window in wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-19 18:08 UTC by Mojahed Yavazi
Modified: 2021-01-25 07:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.0
Sentry Crash Report:
vlad.zahorodnii: Wayland+
vlad.zahorodnii: X11-


Attachments
close a window (2.00 MB, video/quicktime)
2021-01-19 18:08 UTC, Mojahed Yavazi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mojahed Yavazi 2021-01-19 18:08:19 UTC
Created attachment 135002 [details]
close a window

SUMMARY
When close any window, Window decoration close faster than window in wayland.

STEPS TO REPRODUCE
1. open any window
2. close the window

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.9.16-1
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-6500 CPU @ 3.20GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 530
Comment 1 Vlad Zahorodnii 2021-01-21 08:47:42 UTC
Confirmed, the issue is that kwin destroys the decoration immediately after the xdg_toplevel_decoration object has been destroyed, rather than on the next commit.
Comment 2 Bug Janitor Service 2021-01-24 17:07:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/612
Comment 3 Aleix Pol 2021-01-25 07:18:51 UTC
Git commit 3753d4d18d5afcf0d1e9df9095a2ab25796af7e5 by Aleix Pol Gonzalez, on behalf of Vlad Zahorodnii.
Committed on 24/01/2021 at 23:52.
Pushed by vladz into branch 'master'.

wayland: Update decoration on surface commit

This ensures that we process the destruction of the xdg decoration on
the next surface commit.

M  +1    -5    xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/3753d4d18d5afcf0d1e9df9095a2ab25796af7e5
Comment 4 Vlad Zahorodnii 2021-01-25 07:20:33 UTC
Git commit 20766d91b6718386cbc4a888cca24d0873ced54f by Vlad Zahorodnii.
Committed on 25/01/2021 at 07:20.
Pushed by vladz into branch 'Plasma/5.21'.

wayland: Update decoration on surface commit

This ensures that we process the destruction of the xdg decoration on
the next surface commit.


(cherry picked from commit 3753d4d18d5afcf0d1e9df9095a2ab25796af7e5)

M  +1    -5    xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/20766d91b6718386cbc4a888cca24d0873ced54f