wayland: Update decoration on surface commit

This ensures that we process the destruction of the xdg decoration on
the next surface commit.

BUG: 431824


(cherry picked from commit 3753d4d18d5afcf0d1e9df9095a2ab25796af7e5)